--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
+    "dompurify": "^3.0.8",
     "less": "^4.1.3",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
